[package]
name = "lox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lox"
path = "src/bin/lox.rs"

[[bin]]
name = "jlot"
path = "src/bin/lox.rs"


[dependencies]
anyhow = "1.0.95"
bumpalo = { version = "3.17.0", features = ["collections"] }
thiserror = "2.0.11"

[dev-dependencies]
regex = "1.5.4"
test-generator = "0.3.0"
