[package]
name = "clox"
version = "0.1.0"
edition = "2024"

[features]
debug_trace_execution = []
# default = ["debug_trace_execution"]
default = []


[[bin]]
name = "clox"
path = "src/bin/clox.rs"


[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
num_enum = { version = "0.7.4" }
